sparse/src/tests/snapshots/sparse__tests__save_file__save_change_type.snap
---
source: sparse/src/tests/save_file.rs
expression: "&val"
---
{
  "hello": "world",
  "key1": "hello_world"
}
