sparse/src/tests/snapshots/sparse__tests__save_file__save_multiple_files-2.snap
---
source: sparse/src/tests/save_file.rs
expression: "&val"
---
{
  "key1": "unbelievable",
  "list": [
    "hehe1",
    "hehe2",
    {
      "$ref": "file3.json#/key1"
    }
  ]
}
