sparse/src/tests/snapshots/sparse__tests__save_file__save_single_file.snap
---
source: sparse/src/tests/save_file.rs
expression: "&val"
---
{
  "hello": "toto",
  "key1": {
    "$ref": "#/hello"
  }
}
